# alpha_recall

./: .env.example  .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  CLAUDE.md  Dockerfile  HTTP_SERVER_README.md  Justfile  README.md  alpha-recall.py  consolidation_tester.py  debug_consolidation.py  debug_importance_values.py  debug_stm_migration.py  docker-compose.yml  fastmcp_entrypoint.py  fix_emotional_index.py  main.py  migrate_emotional_embeddings.py  migrate_emotional_vectors.py  migrate_ltm_to_768d.py  migrate_stm.py  migrate_stm_to_768d.py  migrate_stm_ttl.py  migrate_to_768d.py  neo4j_backup.sh  pyproject.toml  requirements.txt  server.py  setup.py  start_fastmcp.py  test_alpha_snooze.py  test_fastmcp.py  test_http_server.py  test_memgraph_migration.py  test_new_embedder.py  test_pydantic_schema.py  test_timezone_fix.py
docs/: ADR-007 Enhanced Recall with Integrated Semantic Search.md  ADR-008 Enhanced Bootstrap with Semantic Greeting Analysis.md  ADR-009 Redis-Based Short-Term Memory System.md  ARCHITECTURE.md  CHECKLIST.md  NOTES.md  alpha-recall MCP Tools Specification.md  alpha-recall MVP Specification v6.md  schemata.json
mock_data/: ltm_test_data.json  nm_test_data.json  stm_test_data.json
prompts/: memory_consolidation.md.j2
src/alpha_recall/: __init__.py  __main__.py  config.py  fastmcp_server.py  http_server.py  logging.py  logging_utils.py  migrate_emotional_embeddings.py  migrate_observations.py  migrate_shortterm_memories.py  server.py  version.py
src/alpha_recall/db/: __init__.py  base.py  composite_db.py  factory.py  memgraph_db.py  memgraph_vector_store.py  narrative_memory.py  neo4j_db.py  redis_db.py  semantic_search.py  test_connection.py  vector_store.py
src/alpha_recall/models/: __init__.py  entities.py
src/alpha_recall/reminiscer/: __init__.py  agent.py
src/alpha_recall/schemas/: consolidation.py
src/alpha_recall/services/: __init__.py  consolidation.py  embedding.py  factory.py  geolocation.py  memgraph.py  narrative.py  redis.py  search.py  (+3 more)
tests/: __init__.py  test_emotional_embeddings.py
tests/docker/: e2e.yml
tests/e2e/: conftest.py  test_add_personality_directive.py  test_consolidation_stress.py  test_consolidation_stress_mini.py  test_dynamic_identity.py  test_get_personality.py  test_get_personality_trait.py  test_greenfield_health.py  test_health.py  test_log_capture_demo.py  test_longterm_browsing.py  test_longterm_memory.py  test_mcp_server.py  test_memory_consolidation.py  test_narrative_memory.py  test_personality_workflow.py  test_search_all_memories.py  test_seeded_longterm_memory.py  test_seeded_memory_consolidation.py  test_seeded_narrative_memory.py  test_seeded_search_all_memories.py  test_seeded_shortterm_memory.py  test_shortterm_memory.py
tests/integration/: __init__.py  test_dev_server.py  test_gentle_refresh_integration.py  test_memory_longterm_integration.py  test_memory_narrative_integration.py  test_memory_shortterm_integration.py  test_mock_data_scenarios.py
tests/unit/: __init__.py  test_add_personality_directive.py  test_consolidation_service.py  test_create_personality_trait.py  test_embedding_service.py  test_gentle_refresh.py  test_get_personality.py  test_get_personality_trait.py  test_health.py  test_memory_longterm.py  test_memory_narrative.py  test_memory_shortterm.py  test_time_service.py  test_update_personality_directive_weight.py
(+39 files in other folders)
