[project]
name = "alpha-recall-mcp-server"
version = "0.1.0"
description = "MCP server for alpha-recall: a structured memory system for Project Alpha using Neo4j."
authors = ["Jeffery Harrell <jefferyharrell@gmail.com>"]
requires-python = ">=3.11,<3.13"

[tool.setuptools]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src"
