[project]
name = "alpha-recall"
version = "1.0.0"
description = "alpha-recall is the memory server component of Project Alpha"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "gqlalchemy>=1.2.0,<2.0.0",
    "httpx>=0.25.0,<1.0.0",
    "mcp[cli]>=1.0.0,<2.0.0",
    "neo4j>=5.0.0,<6.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pytz>=2025.2",
    "qdrant-client>=1.7.0,<2.0.0",
    "redis>=6.1.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "fastapi>=0.100.0,<1.0.0",
    "sse-starlette>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic-ai>=0.0.14",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "docker>=7.0.0",
    "pendulum>=3.0.0",
]

[dependency-groups]
dev = [
    "vulture>=2.14",
]
