[project]
name = "alpha-recall"
version = "1.0.0"
description = "alpha-recall is the memory server component of Project Alpha"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "gqlalchemy>=1.2.0,<2.0.0",
    "httpx>=0.25.0,<1.0.0",
    "jinja2>=3.0.0,<4.0.0",
    "numpy>=1.24.0,<2.0.0",
    "ollama>=0.4.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "redis>=6.1.0",
    "sentence-transformers>=5.0.0,<6.0.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "pendulum>=3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]

test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-xdist>=3.0.0,<4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | \.pytest_cache
    | __pycache__
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["N802", "N803"]  # Allow non-lowercase function names in tests

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["alpha_recall"]
src_paths = ["src", "tests"]
